[build-system]
requires = [
    "setuptools>=59.2.0",
    "cython>=0.29.26,<3",  # Sync with CYTHON_MIN_VER in setup
    # Workaround for oldest supported numpy using 1.21.6, but SciPy 1.9.2+ requiring 1.22.3+
    "oldest-supported-numpy; python_version!='3.10' or platform_system!='Windows' or platform_python_implementation=='PyPy'",
    "numpy>=1.22.3; python_version=='3.10' and platform_system=='Windows' and platform_python_implementation != 'PyPy'",
    "numpy; python_version>='3.12'",
    "scipy>=1.4",
    "setuptools_scm[toml]~=7.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "statsmodels"
description = "Statistical computations and models for Python"
readme = "README.rst"
maintainers = [
    { name = "statsmodels Developers", email = "pystatsmodels@googlegroups.com" }
]
license = { text = "BSD License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
]
 requires-python = ">=3.10"

[project.urls]
Homepage = "https://www.statsmodels.org/"
"Bug Tracker" = "https://github.com/statsmodels/statsmodels/issues"
"Documentation" = "https://www.statsmodels.org/stable/index.html"
"Source Code" = "https://github.com/statsmodels/statsmodels"

[tool.setuptools.packages.find]
include = ["LICENSE.txt", "setup.cfg"]

[tool.setuptools_scm]
write_to = "statsmodels/_version.py"
