[build-system]
requires = [
    "setuptools",
    "cython>=0.29.26,<3",  # Sync with CYTHON_MIN_VER in setup
    "numpy>=1.25.0
    "scipy>=1.11",
    "setuptools_scm[toml]~=7.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "statsmodels"
description = "Statistical computations and models for Python"
readme = "README.rst"
maintainers = [
    { name = "statsmodels Developers", email = "pystatsmodels@googlegroups.com" }
]
license = { text = "BSD License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.25.0",
    "scipy>=1.11",
    "pandas>=2.0",
    "patsy>=0.5.2",  # released January 2018
    "packaging>=21.3"  # released Nov 2021
] 

[project.optional-dependencies]
develop = [
    # run
    "matplotlib>=3",
    "colorama",
    "joblib",
    
    # test
    "pytest>=7.3.0",
    "pytest-randomly",
    "pytest-xdist",
    
    # code quality
    "flake8",
    "isort,
]
docs = [
    "sphinx",
    "nbconvert",
    "jupyter_client",
    "ipykernel",
    "matplotlib",
    "nbformat",
    "numpydoc",
    "pandas-datareader",
]

[project.urls]
Homepage = "https://www.statsmodels.org/"
"Bug Tracker" = "https://github.com/statsmodels/statsmodels/issues"
"Documentation" = "https://www.statsmodels.org/stable/index.html"
"Source Code" = "https://github.com/statsmodels/statsmodels"

[tool.setuptools.packages.find]
include = ["LICENSE.txt", "setup.cfg"]

[tool.setuptools_scm]
write_to = "statsmodels/_version.py"
